update api gallery
