# resources/views/APIGallery/create.blade.php
@@ -1,0 +1,36 @@
+@extends('auth.layouts')
+
+@section('content')
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="mb-0">Tambah Gambar</h4>
+                </div>
+                <div class="card-body">
+                    <form action="{{ route('storeGallery') }}" method="POST" enctype="multipart/form-data">
+                        @csrf
+                        <div class="mb-3">
+                            <label for="title" class="form-label">Title</label>
+                            <input type="text" class="form-control" id="title" name="title" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Description</label>
+                            <textarea class="form-control" id="description" rows="5" name="description"
+                                required></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="input-file" class="form-label">File input</label>
+                            <div class="input-group">
+                                <input type="file" class="form-control" id="input-file" name="picture" required>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@endsection
